Exiting of pip mode does not render well for for MediaStream videos https://bugs.webkit.org/show_bug.cgi?id=268750 rdar://122314896

Reviewed by Eric Carlson.

Our listener to bound changes is not useful when hacing the layer in GPUProcess and doing UI side rendering.
It kicks in when entering pip mode, which messes up the rendering computation.
Disable it in that case.

Manually tested.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::rootLayerBoundsDidChange):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::setVideoLayerSizeFenced):

Canonical link: https://commits.webkit.org/276086@main