Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h
@@ -305,6 +305,7 @@ private:
     bool m_waitingForFirstImage { false };
     bool m_isActiveVideoTrackEnabled { true };
     bool m_hasEnqueuedBlackFrame { false };
+    bool m_isMediaLayerRehosting { true };
 
     uint64_t m_sampleCount { 0 };
     uint64_t m_lastVideoFrameMetadataSampleCount { 0 };
